[gd_scene load_steps=4 format=3 uid="uid://6hpc2yphd4t1"]

[ext_resource type="Script" path="res://team/unit_stack.gd" id="1_plp63"]
[ext_resource type="Texture2D" uid="uid://b1v1bfgfavl4c" path="res://unit/types/fighter/F100.svg" id="2_oogqx"]
[ext_resource type="Texture2D" uid="uid://dqerqlfmbvtg7" path="res://unit/types/tank/tank.svg" id="3_1dyy2"]

[node name="stack" type="Node2D"]
z_index = 1
script = ExtResource("1_plp63")

[node name="background" type="ColorRect" parent="."]
offset_right = 80.0
offset_bottom = 80.0
mouse_filter = 2
color = Color(0, 0, 0, 1)

[node name="unit3" type="Sprite2D" parent="."]
position = Vector2(60, 21)
scale = Vector2(0.5, 0.5)
texture = ExtResource("2_oogqx")

[node name="unit2" type="Sprite2D" parent="."]
position = Vector2(60, 58)
scale = Vector2(0.5, 0.5)
texture = ExtResource("3_1dyy2")

[node name="unit1" type="Sprite2D" parent="."]
position = Vector2(24, 56)
scale = Vector2(0.6, 0.6)
texture = ExtResource("3_1dyy2")

[node name="unit_count" type="Label" parent="."]
offset_left = 7.0
offset_top = -4.0
offset_right = 47.0
offset_bottom = 38.0
theme_override_font_sizes/font_size = 30
text = "3"
vertical_alignment = 1
